# hfdown

./: .gitignore  BENCHMARK_SUMMARY.md  CMakeLists.txt  CPP23_IMPLEMENTATION.md  MONITORING_FEATURE.md  Makefile  Makefile.test  QUICKSTART.md  QUIC_INTEGRATION.md  README.md  VASTAI_FLUX_README.md  analyze_asm.py  analyze_milp.py  analyze_sa.py  benchmark.sh  benchmark_analysis.md  benchmark_extreme.sh  benchmark_h3_h2.cpp  benchmark_results.txt  benchmark_test.cpp  benchmark_threads.sh  benchmark_threads_results.txt  benchmark_ttest.py  estimate_lib_lp.py  estimate_lp.py  flux_generator.py  generate_data.py  generate_one_size.py  generate_random_benchmark_data.py  hfdown_correctness.v  hfdown_fsm.dot  hfdown_fsm.tex  hfdown_model.v  json_gen.cpp  lisp_compiler.c  meson.build  prompts.example.txt  requirements-vastai.txt  resource_monitor.py  setup_vastai.sh  (+22 more)
.github/agents/: goal.agent.md
.github/prompts/: plan-completeHfdownHttp3Client.prompt.md
include/: agent_impl.hpp  async_file_writer.hpp  cache_manager.hpp  compact_log.hpp  file_monitor.hpp  git_uploader.hpp  github_client.hpp  hf_client.hpp  http3_client.hpp  http_client.hpp  http_protocol.hpp  json.hpp  kaggle_client.hpp  lambda_ir.hpp  lisp.hpp  quic_socket.hpp  rsync_client.hpp  secret_scanner.hpp  socket_wrapper.hpp  tls_socket.hpp  vast_monitor.hpp
sex/tests/: generate_test_data.py  test_direct.cpp  test_http3.cpp
src/: agent_impl.cpp  agent_impl_func.cpp  async_file_writer.cpp  cache_manager.cpp  file_monitor.cpp  git_uploader.cpp  github_client.cpp  hf_client.cpp  hfdown_ir.cpp  http3_client.cpp  http_client.cpp  http_client_old.cpp  http_protocol.cpp  json_lexer.c  json_parser.c  kaggle_client.cpp  lisp.cpp  main.cpp  quic_socket.cpp  rsync_client.cpp  secret_scanner.cpp  socket_wrapper.cpp  tls_socket.cpp  vast_monitor.cpp
src/tests/: benchmark_buffer.py  benchmark_h3_h2.cpp  benchmark_local.py  generate_random_benchmark_data.py  h2_server.cpp  test_api.cpp  test_checksum.cpp  test_http3_range.cpp
src/tools/: optimize_parameters.py
test-secrets/: api_config.txt  safe.png.txt
tiny-gpt2-test/: config.json  flax_model.msgpack  tf_model.h5
tools/: test_quiche.cpp
tools/qemu/: README.md  meta-data  run_ubuntu_qemu.sh  user-data
